Shipr-Kubernetes/shipr-inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipr-inventory
  labels:
    app: shipr-inventory
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shipr-inventory
  template:
    metadata:
      labels:
        app: shipr-inventory
    spec:
      containers:
      - name: shipr-inventory
        image: osamaazm/test-repo:shipr-inventory
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 15
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
